# pantaubumi-api

./: .dockerignore  .env.example  .gitignore  API.md  Dockerfile  README.md  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  database.py  main.py  scheduler.py
app/ai/: __init__.py  earthquake_alert.py  flood_model.py  landslide_model.py  report_verifier.py  risk_engine.py  train_stubs.py
app/ingestion/: __init__.py  bmkg.py  open_meteo.py  petabencana.py  usgs.py
app/models/: __init__.py  alert.py  evacuation.py  fcm_token.py  report.py  report_flag.py  risk.py
app/routers/: __init__.py  alerts.py  evacuation.py  fcm.py  reports.py  risk.py  weather.py
app/schemas/: __init__.py  alert.py  evacuation.py  fcm.py  flag.py  report.py  response.py  risk.py  weather.py
app/services/: __init__.py  firebase.py  storage.py
app/utils/: __init__.py  cache.py  geo.py
tests/: test_api.py
