[project]
name = "pantau-bumi-api"
version = "0.1.0"
description = "AI-Powered Multi-Disaster Early Warning API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "numpy>=1.26.0",
    "joblib>=1.4.0",
    "firebase-admin>=6.5.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]
nlp = [
    "transformers>=4.44.0",
    "torch>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
